# openapi-v2.yaml
@@ -341,6 +341,11 @@ paths:
         schema:
           type: boolean
       - in: query
+        name: autumn_compatible
+        schema:
+          type: boolean
+          default: false
+      - in: query
         name: compress
         schema:
           type: boolean
@@ -370,6 +375,18 @@ paths:
         schema:
           type: string
           minLength: 1
+      - in: query
+        name: export_format
+        schema:
+          enum:
+          - '1'
+          - '2'
+          type: string
+          default: '2'
+          minLength: 1
+        description: |-
+          * `1` - 1
+          * `2` - 2
       - in: query
         name: note_snippet
         schema:
@@ -424,7 +441,6 @@ paths:
           multipart/form-data:
             schema:
               $ref: '#/components/schemas/ImportRequest'
-        required: true
       security:
       - basicAuth: []
       - cookieAuth: []
@@ -2272,11 +2288,23 @@ components:
       type: object
       properties:
         data: {}
+        data_compressed:
+          type: string
         force:
           type: boolean
           default: false
-      required:
-      - data
+        merge:
+          type: boolean
+          default: false
+        tolerance:
+          type: integer
+          minimum: 0
+          default: 2
+        autumn_import:
+          type: boolean
+          default: false
+        context:
+          type: string
     ImportSummary:
       type: object
       properties:
